--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -7,7 +7,7 @@
       class: "form-control",
       placeholder: "Search by name, condition or description", class: "search"
     %>
-    <%= submit_tag "Search", class: "btn btn-ghost-log-out" %>
+    <%= submit_tag "Search", class: "btn btn-ghost pt-2" %>
   <% end %>
 </div>
 
