--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -27,15 +27,19 @@
 
 .btn-ghost {
   color: white;
+  padding: 10px 40px;
   text-align: center;
   border-radius: 4px;
-  font-weight: lighter;
   font-size: 1rem;
   opacity: 1;
   transition: opacity 0.3s ease;
   background: $dark-purple;
 
-  :hover {
+  a:link {
+    color: white;
+  }
+
+  a:hover {
     // background: $deep-taupe;
     color: $dark-purple;
     background-color: $light-purple;
