--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -16,11 +16,11 @@
       </div>
 
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Email: <%= current_user.email %> </li>
-        <li class="list-group-item">A second item</li>
+        <li class="list-group-item"><strong>Email:</strong> <%= current_user.email %> </li>
+        <li class="list-group-item"><strong>Bio:</strong> Avid doll collector - owner to 100+ dolls </li>
         <li class="list-group-item mb-2 mt-2">
-          <%= link_to "View your bookings", bookings_path, class:"btn-ghost-log-out pt-2 pb-2" %>
-          <%= link_to "Create a new doll", new_doll_path, class:"btn-ghost-log-out pt-2 pb-2" %>
+          <%= link_to "View your bookings", bookings_path, class:"btn btn-ghost pt-2 pb-2" %>
+          <%= link_to "Create a new doll", new_doll_path, class:"btn btn-ghost pt-2 pb-2" %>
         </li>
       </ul>
 
