--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,8 +4,8 @@
   background: $black;
   color: $white;
   height: 20%;
-  position: sticky;
-  top: 0;
+  // position: sticky;
+  // top: 0;
 
 }
 
