--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -47,3 +47,9 @@
 #navbar-username {
   font-family: $logo-font;
 }
+
+#navbar-logo {
+  font-family: $logo-font;
+  font-size: 35px;
+  color: white;
+}
